tests/rename/should_compile/T14487A.hs
{-# LANGUAGE DuplicateRecordFields #-}

module T14487A where

data X = X {
    duplicateName :: Int
}
