tests/rename/should_fail/T5281A.hs

module T5281A where

{-# DEPRECATED deprec "This is deprecated" #-}
deprec :: Int
deprec = 5

